--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseVideoAlmacenada/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseVideoAlmacenada/index.xhtml
@@ -20,16 +20,17 @@
                     <h:form>
                         <div class="Container70 Responsive">
                             <h:outputScript name="videoclase.js" library="js" />                    
-                            <video id="video" class="Container73" autoplay="true" controls="true"></video>                    
-                            <canvas id="canvas" class="Container70" style="display: none"></canvas>
+                            <video id="video" class="Container70" autoplay="true" controls="true"></video>
+                        </div>
+                        <div >
+                            
                         </div>
                     </h:form>
                 </h:form>
             </p:tab>
             <p:tab title="Recibir Video Clase Almacenada">
                 <h:form>
-                    <div class="Container100 Responsive">
-                        <h:outputScript name="videoclase.js" library="js" />                    
+                    <div class="Container100 Responsive">                        
                         <video id="video2" class="Container73" autoplay="true" controls="true"></video>                    
                         <canvas id="canvas2" class="Container70" style="display: none"></canvas>
                     </div>
