--- a/SIENI/SIENI-web/src/main/webapp/view/reportes/rendimientoAlumno/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/reportes/rendimientoAlumno/index.xhtml
@@ -21,34 +21,50 @@
                     </p:dialog>
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <p:dataTable id="rendimiento" rows="10" var="car" value="#{clasesForm.plantillas}" 
-                                 paginator="true"
+                                 paginator="false"
                                  paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                  rowsPerPageTemplate="5,10,15"
                                  reflow="true"
                                  >
                         
                         <p:column headerText="Grado"  filterMatchMode="contains" filterable="true">
+                            #{formatoPantallas.campo30}
                         </p:column>
                         <p:column headerText="Materia"  filterMatchMode="contains" filterable="true">
+                            #{formatoPantallas.campo50}
                         </p:column>
                         <p:column headerText="Alumno"  filterMatchMode="contains" filterable="true">
+                            #{formatoPantallas.campo100}
                         </p:column>
                         <p:column headerText="Tipo de Evaluacion"  filterMatchMode="contains" filterable="true">
+                            #{formatoPantallas.campo50}
                         </p:column>
                         <p:column headerText="%Aprobados"  filterMatchMode="contains" filterable="true">
+                            #{formatoPantallas.porcentaje}
                         </p:column>
                         <p:column headerText="%Reprobados"  filterMatchMode="contains" filterable="true">
+                            #{formatoPantallas.porcentaje}
                         </p:column>
                         <p:column headerText="Promedio"  filterMatchMode="contains" filterable="true">
+                            #{formatoPantallas.numeroDecimal}
                         </p:column>
-                       
+            <f:facet name="footer">
+                            Total de alumnos 999
+                        </f:facet>
                     </p:dataTable>
                     <div class="EmptyBox20"></div>
-                    <p:panelGrid columns="3" class="Container50 Responsive">
-                    <p:outputLabel value="Exportar a: " ></p:outputLabel>
-                    <p:inputSwitch id="verNota" onLabel="Excel" offLabel="PDF"></p:inputSwitch>
-                    <p:commandButton value="Generar"></p:commandButton>
-                    </p:panelGrid>
+                    <div class="TexAlCenter">
+                        
+                        <h:panelGrid columns="4" class="TexAlCenter" style="margin-bottom:10px" cellpadding="5">
+                        <p:outputLabel value="Exportar a:"></p:outputLabel>
+                            <p:selectOneRadio  id="console" value="#{radioView.console}">
+                            <f:selectItem itemLabel="Excel" itemValue="Excel" />
+                            <f:selectItem itemLabel="PDF" itemValue="PDF" />
+                        </p:selectOneRadio>
+                        <p:commandButton  value="Generar"></p:commandButton>
+                        <p:commandButton value="Regresar"></p:commandButton>
+                        </h:panelGrid>
+                    </div>
                 </h:form>
                
                     
