--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/ejerciciosResueltos/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/ejerciciosResueltos/index.xhtml
@@ -34,22 +34,25 @@
             
             <p:tab title="Ejercicio Resuelto">
                 <h:form>
-                    
+               <p:outputLabel  value="Algebra " class="  Container20 Responsive"></p:outputLabel>  
+                     <div class="EmptyBox20"></div>
                        
         <h:graphicImage name="ejerResuelto.png" styleClass="Fleft" library="images" />
+        
         <div class="EmptyBox20"></div>
-                    <div class="TexAlCenter">
-                        
-                        <h:panelGrid columns="4" class="TexAlCenter" style="margin-bottom:10px" cellpadding="5">
+                    <div class="Container100 Responsive">
+                       <h:panelGrid columns="4" class="TexAlCenter" style="margin-bottom:10px" cellpadding="5">
                         <p:outputLabel value="Exportar a:"></p:outputLabel>
                             <p:selectOneRadio  id="console" value="#{radioView.console}">
-                            <f:selectItem itemLabel="Imagen PNG" itemValue="PNG" />
+                            <f:selectItem itemLabel="PNG" itemValue="PNG" />
                             <f:selectItem itemLabel="PDF" itemValue="PDF" />
                         </p:selectOneRadio>
                         <p:commandButton  value="Generar"></p:commandButton>
                         <p:commandButton value="Regresar"></p:commandButton>
                         </h:panelGrid>
+                                 
                     </div>
+      
   
                 </h:form>
                
