--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteAlumnos/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteAlumnos/index.xhtml
@@ -7,14 +7,14 @@
     <ui:define name="breadCrumb">
         <p:breadCrumb>
             <p:menuitem value="Home" url="/"/>
-            <p:menuitem value="Reporte de Evaluaciones por Año Escolar" url="#{siteUrls.reporteEvaluaciones}"/>
+            <p:menuitem value="Reporte de Alumnos" url="#{siteUrls.reporteAlumnos}"/>
 
             <p:separator />
         </p:breadCrumb>
     </ui:define>
     <ui:define name="content">
         <p:tabView>
-            <p:tab title="Reporete de Matriculas">
+            <p:tab title="Reporte de Alumnos">
                 <h:form>
                     <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
                         <p:outputLabel value="Esta ayuda sirve un monton"/>
@@ -29,31 +29,34 @@
                                  rowsPerPageTemplate="5,10,15"
                                  reflow="true">
 
-                        <p:column headerText="Nombre de Plantilla" >
-                            #{formatoPantallas.campo50}
+                        <p:column headerText="Alumno" >
+                            #{formatoPantallas.campo100}
                         </p:column>
-                        <p:column headerText="Grado" >
-                            #{formatoPantallas.campo30}
+                        <p:column headerText="Fecha Nacimiento" >
+                            #{formatoPantallas.fecha}
                         </p:column>
-                        <p:column headerText="Materia" >
-                            #{formatoPantallas.campo50}
+                        <p:column headerText="Edad" >
+                            #{formatoPantallas.numero2}
                         </p:column>
-                        <p:column headerText="Tipo de Plantilla" >
-                            #{formatoPantallas.campo15}
+                        <p:column headerText="Sexo" >
+                            #{formatoPantallas.campo10}
                         </p:column>
-                        <p:column headerText="Estado de la plantilla" >
-                            #{formatoPantallas.campo15}
+                        <p:column headerText="Direccion" >
+                            #{formatoPantallas.campo100}
                         </p:column>
-                        <p:column headerText="Elaborada por">
-                            #{formatoPantallas.campo80}
+                        <p:column headerText="Tel Emergencia" >
+                            #{formatoPantallas.telefono}
                         </p:column>
-                        
+                        <p:column headerText="Grado Actual" >
+                            #{formatoPantallas.numero1}
+                        </p:column>
 
                         
                         <f:facet name="footer">
-                            Total de alumnos 999
+                            Total de Alumnos 999
                         </f:facet>
                     </p:dataTable>
+                    
                     <div class="EmptyBox20"></div>
                     <div class="TexAlCenter">
                         
